--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model GAC.Models.RegisterExternalLoginModel
+﻿@model ObrasPublicas.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
