--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/_SetPasswordPartial.cshtml
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model GAC.Models.LocalPasswordModel
+﻿@model ObrasPublicas.Models.LocalPasswordModel
 
 <p>
     You do not have a local password for this site. Add a local
