--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/Manage.cshtml
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model GAC.Models.LocalPasswordModel
+﻿@model ObrasPublicas.Models.LocalPasswordModel
 @{
     ViewBag.Title = "Manage Account";
 }
