--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@model ICollection<GAC.Models.ExternalLogin>
+﻿@model ICollection<ObrasPublicas.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (GAC.Models.ExternalLogin externalLogin in Model)
+        @foreach (ObrasPublicas.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
