Ingreso al sistema
Cambios para el ingreso a los módulos.

--- a/Proyecto_Municipalidad_SanIsidro/GAC/Views/Shared/Site.Master
+++ b/Proyecto_Municipalidad_SanIsidro/GAC/Views/Shared/Site.Master
@@ -202,7 +202,7 @@
                         
                 </form>
                 --> 
-                <ul class="sidebar-menu">
+                <!--<ul class="sidebar-menu">
                     <li class="header">NAVEGACION PRINCIPAL</li>
                     <li class="treeview active">
                         <a href="#">
@@ -217,7 +217,7 @@
                             </li>
                         </ul>
                     </li>
-                    <!--
+                    
                     <li class="treeview">
                         <a href="#">
                             <i class="fa fa-files-o"></i>
@@ -230,8 +230,8 @@
 
                         </ul>
                     </li>
-                    -->
-                </ul>
+                    
+                </ul>-->
             </section>
             <!-- /.sidebar -->
         </aside>
