--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Shared/Site_Intranet.Master
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/Views/Shared/Site_Intranet.Master
@@ -143,8 +143,8 @@
                         </li>
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="<%: Url.Content("~/images/imgtemplate/Bart_Simpson.jpg") %>" class="user-image" alt="User Image">
-                                <span class="hidden-xs">Bart Simpson</span>
+                                <img src="<%: Url.Content("~/images/imgtemplate/default-user.gif") %>" class="user-image" alt="User Image">
+                                <span class="hidden-xs">Eliana Orellana</span>
                             </a>
                             
                             <ul class="dropdown-menu">
@@ -189,11 +189,11 @@
                 <div class="user-panel">
                     
                     <div class="pull-left image">
-                        <img src="<%: Url.Content("~/Images/imgtemplate/Bart_Simpson.jpg") %>" class="img-circle" alt="User Image" />
+                        <img src="<%: Url.Content("~/Images/imgtemplate/default-user.gif") %>" class="img-circle" alt="User Image" />
                     </div>
                     
                     <div class="pull-left info">
-                        <p>Bart Simpson</p>
+                        <p>Eliana Orellana</p>
 
                         <a href="#"><i class="fa fa-circle text-success"></i>Online</a>
                     </div>
@@ -239,72 +239,12 @@
                                 <a href="/entregamaterialop/index"><i class="fa fa-circle-o"></i>Actualizar Entrega de Materiales</a>
                             </li>
                         </ul>
-                    </li>
-
-
-                    <li class="treeview active">
-                        <a href="#">
-                            <i class="fa fa-dashboard"></i><span>Quejas / Reclamos</span><i class="fa fa-angle-left pull-right"></i>
-                        </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="/Reclamo/ConsultarReclamo"><i class="fa fa-circle-o"></i>Consultar Queja/Reclamo</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Actualizar Hoja de Respuesta</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Consultar Hoja de Respuesta</a>
-                            </li>
-                            <li>
-                                <a href="/Reclamo/RegistrarReclamo"><i class="fa fa-circle-o"></i>Registrar Queja o Reclamo</a>
-                            </li>
-                        </ul>
-                        <a href="#">
-                            <i class="fa fa-dashboard"></i><span>Sugerencias</span><i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Consultar Sugerencias</a>
-                            </li>
-                        </ul>
-                        <a href="#">
-                            <i class="fa fa-dashboard"></i><span>Solicitud Tercero</span><i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Actualizar Solicitud Tercero</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Consultar Solicitud Tercero</a>
-                            </li>
-                        </ul>
-                        <a href="#">
-                            <i class="fa fa-dashboard"></i><span>Reportes</span><i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Quejas y Reclamos</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i>Sugerencias</a>
+                                <a href="/informeobra/index"><i class="fa fa-circle-o"></i>Actualizar Informe de obra</a>
                             </li>
                         </ul>
                     </li>
-                    <!--
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-files-o"></i>
-                            <span>Administracion</span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#"><i class="fa fa-circle-o"></i>Departamento</a></li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i>Provincia</a></li>
-                            <li class="active"><a href="#"><i class="fa fa-circle-o"></i>Distrito</a></li>
-
-                        </ul>
-                    </li>
-                    -->
                 </ul>
             </section>
             <!-- /.sidebar -->
