--- a/Proyecto_Municipalidad_SanIsidro/GAC/Views/Shared/Site_Catastro.Master
+++ b/Proyecto_Municipalidad_SanIsidro/GAC/Views/Shared/Site_Catastro.Master
@@ -293,5 +293,28 @@
     <%: Scripts.Render("~/Scripts/jstemplate/demo.js") %>
 
     <asp:ContentPlaceHolder ID="ScriptsSection" runat="server" />
+
+    <div class="modal modal-warning" id="ModalValidacion">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="TituloModalConfir"></h4>
+                </div>
+                <div class="modal-body">
+                    <p id="p1ModalConfir"></p>
+
+                    <p id="p2ModalConfir"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline pull-left" data-dismiss="modal">Cerrar</button>
+                    <%--<button type="button" class="btn btn-outline" id="btnModalConfir" onclick="EliminarGeneral($(this).html())"></button>--%>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
 </body>
 </html>
